--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
 
 /* Your CSS Code here. */
+.box{
+	padding:50px;
+	width:300px;
+	background-color:lightblue;
+	border:15px solid blue;
+/* 	padding:50px; */
+	margin:20px;
+}
